--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,6 @@
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <title>Spoon University Secret Sauce</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -23,6 +22,96 @@
 <% end %>
 <div class="container">
 <%= yield %>
+
+
+    <script type="text/x-handlebars-template" id="quizTemplate">
+      <h1 class="title">
+        {{ title }}
+      </h1>
+      <h2 class="subtitle">
+        {{ subtitle }}
+      </h2>
+      
+      <div class="well" id="questionBox">
+        <div class="pull-right scores">
+          <h4>Score: <span id="score">{{ score }}</span> / <span id="possibleScore">{{ possibleScore }}</span></h4>
+        </div>
+        <div class="intro">
+          <p>{{ introText }}</p>
+          <button class="startQuiz btn btn-primary">Start the quiz!</button>
+        </div>
+        <div class="question">
+        
+        </div>
+      </div>      
+    </script>
+
+    
+    <script type="text/x-handlebars-template" id="multiQuestionTemplate">
+      <div class="row-fluid">
+        <div class="span4">
+          {{ question }}
+        </div>
+        <div class="span4">
+          <div class="questionCtn">
+            {{#each options }}
+              {{#each this}}
+                 {{#if (this) }}
+                  <label class="radio">
+                     <input type="radio" name="options" value="{{ this }}">
+                      {{ this }}
+                  </label>
+                {{/if}} 
+              {{/each}}
+            {{/each}}
+          </div>
+          <div class="answerCtn" style="display:none;">
+            <h3 class="status"></h3>
+            <p>The answer is: <br />{{ answer }}</p>
+          </div>
+          <div class="buttons">
+            <button class="checkResults btn btn-primary">Check Answer</button>
+            <button class="nextQuestion btn btn-primary" style="display:none;">Next Question</button>
+          </div>
+        </div>
+      </div>
+    </script>
+    
+
+    <script type="text/x-handlebars-template" id="answerTemplate">
+        //  _.each( shuffledItems, function( item ){ 
+           {{#each this}}
+                <li>{{ shuffledItems }}</li>
+         //});
+           {{/each}}
+  
+    </script>
+
+    
+    <script type="text/x-handlebars-template" id="finalScoreTemplate">
+      <h3>Your final score is:</h3>
+      <h1><span id="score">{{ score }}</span> / <span id="possibleScore">{{ possibleScore }}</span></h1> 
+        <h2>Nicely Done!</h2>
+    </script>
+
+    </head>
+  <body class="container">
+    
+    <div class="row">
+      <div id="quiz" class="span12">
+        
+      </div>
+      <div id="question" class="span12">
+        
+      </div>
+    </div>
+    
+
+
+  <%= javascript_include_tag "application" %>
+
+
+
 </div>
 </body>
 </html>
