--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -90,6 +90,17 @@ a.completed {
 	font-weight: 700;
 }
 
+.staff-directory .badge {
+	text-transform:uppercase;
+	font-size:9px;
+	padding: 3px 7px 2px;
+	margin:0px;
+}
+
+
+.col-md-3:nth-child(4n+2), .col-sm-4:nth-child(3n+2) {
+	clear:left;
+}
 
 
 
