--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -50,7 +50,7 @@
 		<a href="/schools/<%= current_user.school.shortname %>" class="btn btn-primary school" style="background-color: <%= current_user.school.color_1 %> "><%= current_user.school.name %></a>
 		<div class="list-group">
 			<a class="list-group-item" href="<%= edit_user_registration_path %>">Edit Profile</a>
-		  <a class="list-group-item" href="/all-staff">All Staffers</a>
+		  <a class="list-group-item" href="/staff">All Staffers</a>
 		  <a class="list-group-item" href="<%= schools_path %>">All Schools</a>
 		  <a class="list-group-item" href="#">Publishing Spreadsheet</a>
 		  <a class="list-group-item" href="<%= faq_path %>">FAQ</a>
