--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -1,8 +1,18 @@
-<% @positions.each do |position| %>
-<h3><%= position.name %></h3>
-<ul class="list-unstyled">
-	<% position.pages.each do |page| %>
-	<li><a href="/<%= position.track(page) %>/<%= position.shortname %>/<%= page.shortname %>"><%= page.name %></a></li>
+<div class="row positions">
+	<% @positions.each do |position| %>
+	<div class="col-sm-4 col-md-3">
+		<div class="panel panel-default">
+		  <div class="panel-heading">
+		    <h3 class="panel-title"><%= position.name %></h3>
+		  </div>
+		  <div class="panel-body">
+		    <ul class="list-unstyled">
+					<% position.pages.each do |page| %>
+					<li><a href="/<%= position.track(page) %>/<%= position.shortname %>/<%= page.shortname %>"><%= page.name %></a></li>
+					<% end %>
+				</ul>
+		  </div>
+		</div>
+	</div>
 	<% end %>
-</ul>
-<% end %>
+</div>
