--- a/app/views/positions/editorial/_style.html.erb
+++ b/app/views/positions/editorial/_style.html.erb
@@ -1,58 +1,58 @@
 <div class="styles-images">
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-sm-3">
       <img src="/assets/editorial/1.png">
     </div>
-    <div class="col-md-3">
+    <div class="col-sm-3">
       <img src="/assets/editorial/2.png">
     </div>
-    <div class="col-md-3">
+    <div class="col-sm-3">
       <img src="/assets/editorial/3.png">
     </div>
-    <div class="col-md-3">
+    <div class="col-sm-3">
       <img src="/assets/editorial/4.png">
     </div>
   </div>
 
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-sm-3">
       <img src="/assets/editorial/5.png">
     </div>
-    <div class="col-md-3">
+    <div class="col-sm-3">
       <img src="/assets/editorial/6.png">
     </div>
-    <div class="col-md-3">
+    <div class="col-sm-3">
       <img src="/assets/editorial/7.png">
     </div>
-    <div class="col-md-3">
+    <div class="col-sm-3">
       <img src="/assets/editorial/8.png">
     </div>
   </div>
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-sm-3">
       <img src="/assets/editorial/9.png">
     </div>
-    <div class="col-md-3">
+    <div class="col-sm-3">
       <img src="/assets/editorial/10.png">
     </div>
-    <div class="col-md-3">
+    <div class="col-sm-3">
       <img src="/assets/editorial/11.png">
     </div>
-    <div class="col-md-3">
+    <div class="col-sm-3">
       <img src="/assets/editorial/12.png">
     </div>
   </div>
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-sm-3">
       <img src="/assets/editorial/13.png">
     </div>
-    <div class="col-md-3">
+    <div class="col-sm-3">
       <img src="/assets/editorial/14.png">
     </div>
-    <div class="col-md-3">
+    <div class="col-sm-3">
       <img src="/assets/editorial/15.png">
     </div>
-    <div class="col-md-3">
+    <div class="col-sm-3">
       <img src="/assets/editorial/16.png">
     </div>
   </div>
