--- a/app/views/positions/editorial/_login.html.erb
+++ b/app/views/positions/editorial/_login.html.erb
@@ -1,5 +1,7 @@
-We use a program called WordPress to publish all articles to the site. Once you get the hang of it, it’s super easy to use, but you gotta learn first. The following steps will only work if you’ve received an email from WordPress with your user login. If you haven’t received that email, stop right now and email Mackenzie (if you’re an EIC), or your EIC (if you’re a writer or editor) to tell them to make you an account.
  
+<div class="row">
+	<div class="col-sm-6">
+		We use a program called WordPress to publish all articles to the site. Once you get the hang of it, it’s super easy to use, but you gotta learn first. The following steps will only work if you’ve received an email from WordPress with your user login. If you haven’t received that email, stop right now and email Mackenzie (if you’re an EIC), or your EIC (if you’re a writer or editor) to tell them to make you an account.
 
 PUT IT INTO PRACTICE:
 <ul>
@@ -7,8 +9,7 @@ PUT IT INTO PRACTICE:
   <strong>(e.g. myschool.spoonuniversity.com/wp-login.php)</strong></ol>
   <ol>Enter your username and password and click log in.</ol>
 </ul>
-
-
-<!-- VIDEO GOES HERE
-http://secretsauce.spoonuniversity.com/log-in/
- -->
+</div>
+<div class="col-sm-6">
+<iframe src="//player.vimeo.com/video/79439549" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</div>
