videos links added to pages

--- a/app/views/positions/editorial/_add_user.html.erb
+++ b/app/views/positions/editorial/_add_user.html.erb
@@ -1,28 +1,31 @@
+<p>It’s your responsibility to add your writers and editors to the WordPress database. Note that they can’t complete the Secret Sauce guide until you make them an account, so sign them up ASAP.</p>
 
-It’s your responsibility to add your writers and editors to the WordPress database. Note that they can’t complete the Secret Sauce guide until you make them an account, so sign them up ASAP.
+<div class="row">
+  <div class="col-sm-6">
+    <iframe src="//player.vimeo.com/video/74733427" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  </div>
 
-PUT IT INTO PRACTICE:
-<ol>
-  <li>
-    Log into the admin dashboard and go to Users > Add New.
-  </li>
-  <li>
-    Create username (first and last name) and enter email address.
-  </li>
-  <li>
-    Select role and click “add new user.”
-  </li>
-</ol>
-User should follow instructions in confirmation email.
+  <div class="col-sm-6">
+    <p>PUT IT INTO PRACTICE:</p>
+    <ol>
+      <li>
+        Log into the admin dashboard and go to Users > Add New.
+      </li>
+      <li>
+        Create username (first and last name) and enter email address.
+      </li>
+      <li>
+        Select role and click “add new user.”
+      </li>
+    </ol>
+    <p>User should follow instructions in confirmation email.<p>
 
-ROLES
-<ul>
-  <li>Editor-in-chief should be admin</li>
-  <li>Editors should be editors</li>
-  <li>Writers should be authors</li>
-</ul>
+    <p>ROLES</p>
+    <ul>
+      <li>Editor-in-chief should be admin</li>
+      <li>Editors should be editors</li>
+      <li>Writers should be authors</li>
+    </ul>
+  </div>
+</div>
 
-
-<!-- VIDEO HERE
-http://secretsauce.spoonuniversity.com/add-user/
- -->
