--- a/app/views/positions/editorial/_chapter_spreadsheet.html.erb
+++ b/app/views/positions/editorial/_chapter_spreadsheet.html.erb
@@ -1,7 +1,6 @@
 
-
-You can access the spreadsheet in Google Drive <a href="https://docs.google.com/spreadsheet/ccc?key=0Au6DS9B6X4_RdGRVS0xZU1BGdEZPS1BRX3FxeWkzd0E#gid=2">here</a>.
-The publishing spreadsheet will be used to keep track of the status of every article. It’s color-coded so you can see at a glance which articles have been published and which need to move forward more quickly. It’s a bit confusing, so ask questions if you need, but make sure all writers and editors are on board. We PROMISE your lives will be more organized with this baby.
+<p>You can access the spreadsheet in Google Drive <a href="https://docs.google.com/spreadsheet/ccc?key=0Au6DS9B6X4_RdGRVS0xZU1BGdEZPS1BRX3FxeWkzd0E#gid=2">here</a>.
+The publishing spreadsheet will be used to keep track of the status of every article. It’s color-coded so you can see at a glance which articles have been published and which need to move forward more quickly. It’s a bit confusing, so ask questions if you need, but make sure all writers and editors are on board. We PROMISE your lives will be more organized with this baby.</p>
 
 
 <!-- SPREADSHEET GOES HERE
