--- a/app/views/positions/editorial/_final_checks.html.erb
+++ b/app/views/positions/editorial/_final_checks.html.erb
@@ -1,5 +1,5 @@
 
-Bookmark this page if you need to be reminded of all of these details!
-If you don’t see all of these options for Broadcasting posts (down at the bottom), email <a href="mailto:sarah@spoonuniversity.com">Sarah</a> and she’ll fix it for you.
+<p>Bookmark this page if you need to be reminded of all of these details!
+If you don’t see all of these options for Broadcasting posts (down at the bottom), email <a href="mailto:sarah@spoonuniversity.com">Sarah</a> and she’ll fix it for you.</p>
 
 <img src="/assets/editorial/40.png">
