--- a/app/views/positions/editorial/_post.html.erb
+++ b/app/views/positions/editorial/_post.html.erb
@@ -1,47 +1,70 @@
 
-<ol>
-  <li>
-    First, know what <strong>type</strong> of post it is.
-    <ul>
-      <li>
-        For students, campus or events, go to Posts > Add new
-      </li>
-      <li>
-        For Restaurant posts, go to Restaurant > Add new
-      </li>
-      <li>
-        For Recipes, go to Recipe > Add new
-      </li>
-      <li>
-        For Kitchen 101 is Kitchen 101 > Add New
-      </li>
-      <li>
-        For Food for Thought, go to Food for Thought > Add New
-      </li>
-    </ul>
-  </li>
-  <li>
-    Enter title and the body of the article (with proper <strong><a href="">formatting</a></strong>). Make sure you’re using the visual tab, and for more on the toolbar, check out <a href="http://spoonuniversity.com/images/screenshot-edit-explained.png">this</a> graphic! 
-  </li>
-  <li>
-    NEW! Add a 100 character dek (or subtitle) to your article to give it context and encourage readers to click. The dek box is located below the title.
-  </li>
-  <li>
-    Select the main <strong>category</strong> (e.g. Recipes) and all appropriate subcategories (e.g. 20 Minutes or Less).
-  </li>
-  <li>
-    Check the box to “<strong>Allow Comments.</strong>”
-  </li>
-  </li>
-    Enter the <strong>SEO</strong> Title and description (this sets what comes up in Google Searches and on Facebook). 
-  </li>
-  <li>
-    You can “<strong>Preview</strong>” your post, then select “Save as Draft” or “Submit for Review.” 
-  </li>
-</ol>
 
-PUT IT INTO PRACTICE:
-Click around your WordPress Dashboard and create a post. Familiarize yourself with the toolbar and other options.
+<div class="row">
+  <div class="col-sm-6">
+    <iframe src="//player.vimeo.com/video/79539371" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  </div>
+
+  <div class="col-sm-6">
+    <ol>
+      <li>
+        First, know what <strong>type</strong> of post it is.
+        <ul>
+          <li>
+            For students, campus or events, go to Posts > Add new
+          </li>
+          <li>
+            For Restaurant posts, go to Restaurant > Add new
+          </li>
+          <li>
+            For Recipes, go to Recipe > Add new
+          </li>
+          <li>
+            For Kitchen 101 is Kitchen 101 > Add New
+          </li>
+          <li>
+            For Food for Thought, go to Food for Thought > Add New
+          </li>
+        </ul>
+      </li>
+      <li>
+        Enter title and the body of the article (with proper <strong><a href="">formatting</a></strong>). Make sure you’re using the visual tab, and for more on the toolbar, check out <a href="http://spoonuniversity.com/images/screenshot-edit-explained.png">this</a> graphic! 
+      </li>
+      <li>
+        NEW! Add a 100 character dek (or subtitle) to your article to give it context and encourage readers to click. The dek box is located below the title.
+      </li>
+      <li>
+        Select the main <strong>category</strong> (e.g. Recipes) and all appropriate subcategories (e.g. 20 Minutes or Less).
+      </li>
+      <li>
+        Check the box to “<strong>Allow Comments.</strong>”
+      </li>
+      </li>
+        Enter the <strong>SEO</strong> Title and description (this sets what comes up in Google Searches and on Facebook). 
+      </li>
+      <li>
+        You can “<strong>Preview</strong>” your post, then select “Save as Draft” or “Submit for Review.” 
+      </li>
+    </ol>
+
+    <p>PUT IT INTO PRACTICE:</p>
+    <p>Click around your WordPress Dashboard and create a post. Familiarize yourself with the toolbar and other options.</p>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
