--- a/app/views/positions/editorial/_slideshow.html.erb
+++ b/app/views/positions/editorial/_slideshow.html.erb
@@ -1,27 +1,31 @@
-<ol>
-  <li>
-    Click Slideshows > Add New
-  </li>
-  <li>
-    Insert Title
-  </li>
-  <li>
-    Click Image Slide to add a new one.
-  </li>
-  <li>
-    Select from your photo library or drag and drop into the library itself.
-  </li>
-  <li>
-    Insert the title and description, which will appear, and you add a link if you want.
-  </li>
-  <li>
-    Customize the setting, such as maximum width (suggested: 1024) and height (suggested: 550).
-  </li>
-  <li>
-    Click Update/Publish, and copy and paste the shortcode into the post where you want the slideshow to appear.
-  </li>
-</ol>
 
-<!-- VIDEO HERE
-http://secretsauce.spoonuniversity.com/slideshow/
- -->
+ <div class="row">
+  <div class="col-sm-6">
+    <iframe src="//player.vimeo.com/video/81437703" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  </div>
+  <div class="col-sm-6">
+    <ol>
+      <li>
+        Click Slideshows > Add New
+      </li>
+      <li>
+        Insert Title
+      </li>
+      <li>
+        Click Image Slide to add a new one.
+      </li>
+      <li>
+        Select from your photo library or drag and drop into the library itself.
+      </li>
+      <li>
+        Insert the title and description, which will appear, and you add a link if you want.
+      </li>
+      <li>
+        Customize the setting, such as maximum width (suggested: 1024) and height (suggested: 550).
+      </li>
+      <li>
+        Click Update/Publish, and copy and paste the shortcode into the post where you want the slideshow to appear.
+      </li>
+    </ol>
+  </div>
+</div>
