--- a/app/views/positions/editorial/_style.html.erb
+++ b/app/views/positions/editorial/_style.html.erb
@@ -1,4 +1,3 @@
-<h1>Style</h1>
 
 <div class="styles-images">
   <div class="row">
@@ -60,12 +59,7 @@
   </div>
 </div>
 
-
-
-
-<div class="track-body">
-    <%= render "positions/quiz_tr" %>
+<div>
+  <%= render "positions/quiz_tr" %>
 </div>
 
-
-<!-- QUIZ ON EDITORIAL STYLE -->
