--- a/app/views/positions/editorial/_update_staff.html.erb
+++ b/app/views/positions/editorial/_update_staff.html.erb
@@ -1,5 +1,6 @@
-You need to be sure to keep your Staff page updated — everyone deserves credit for the work they do!
-TRY IT NOW:
+
+<p>You need to be sure to keep your Staff page updated — everyone deserves credit for the work they do!</p>
+<p>TRY IT NOW:</p>
 
 <ol> 
   <li>
