--- a/app/views/positions/editorial/_add_photos.html.erb
+++ b/app/views/positions/editorial/_add_photos.html.erb
@@ -1,35 +1,47 @@
-Every post needs photos, and since our photographers upload all their photos to flickr, we gotta know how to get them from there. Here’s how to insert your photos into WordPress from Flickr.
+<p>Every post needs photos, and since our photographers upload all their photos to flickr, we gotta know how to get them from there. Here’s how to insert your photos into WordPress from Flickr.</p>
 
-<ol>
-  <li>
-    Open desired photo on Flickr
-  </li>
-  <li>
-    On the bottom right of the photo, click the <img src="/assets/editorial/51.png">
-  </li>
-  <li>
-    Open “Grab the HTML/BCCode.” Make sure photo size is at least 770x500px, no larger than 1024px wide.
-  </li>
-  <li>
-    Copy the HTML text.
-  </li>
-  <li>
-    Go to the article on WordPress.
-  </li>
-  <li>
-    Select “Text” to view the text editor, with the HTML code.
-  </li>
-  <li>
-    Paste the HTML code where you want to place the photo.
-  </li>
-  <li>
-    Go back to the “Visual” editor to add a photo credit.
-  </li>
-</ol>
+<div class="row">
+  <div class="col-sm-6">
+    <iframe src="//player.vimeo.com/video/79439052" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  </div>
 
-<img src="/assets/editorial/50.png">
-WARNING: Sometimes, the default image size will be medium instead of large! Be sure to scroll down on the right and see that ‘LARGE’ is selected in the dropdown menu.
+  <div class="col-sm-6">
+    <ol>
+      <li>
+        Open desired photo on Flickr.
+      </li>
+      <li>
+        On the bottom right of the photo, click the <img src="/assets/editorial/51.png">.
+      </li>
+      <li>
+        Open “Grab the HTML/BCCode.” Make sure photo size is at least 770x500px, no larger than 1024px wide.
+      </li>
+      <li>
+        Copy the HTML text.
+      </li>
+      <li>
+        Go to the article on WordPress.
+      </li>
+      <li>
+        Select “Text” to view the text editor, with the HTML code.
+      </li>
+      <li>
+        Paste the HTML code where you want to place the photo.
+      </li>
+      <li>
+        Go back to the “Visual” editor to add a photo credit.
+      </li>
+    </ol>
+  </div>
+</div>
+
+<div class="col-sm-6">
+  <iframe src="//player.vimeo.com/video/85962617" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</div>
+
+<div class="col-sm-6">
+  <img src="/assets/editorial/50.png">
+  <p>WARNING: Sometimes, the default image size will be medium instead of large! Be sure to scroll down on the right and see that ‘LARGE’ is selected in the dropdown menu.</p>
+</div>
 
 
-<!-- TWO  VIDEO  HERE 
-http://secretsauce.spoonuniversity.com/add-photos/ -->
