--- a/app/views/positions/editorial/_profile.html.erb
+++ b/app/views/positions/editorial/_profile.html.erb
@@ -1,28 +1,34 @@
 
-Before you publish anything onto WordPress, make sure your user profile is up to snuff so readers can see your bio and pretty face at the bottom of each post.
+<p>Before you publish anything onto WordPress, make sure your user profile is up to snuff so readers can see your bio and pretty face at the bottom of each post.</p>
 
-PUT IT INTO PRACTICE:
-<ol>
-  <li>
-    From the dashboard, go to Profile > Your Profile.
-  </li>
-  <li>
-    Update your first and last name and change your display name to “First Last.”
-  </li>
-  <li>
-    Write a short bio about yourself. This will show up on all of your posts. Talk about yourself in the third person.
-  </li>
-  <li>
-    Create a password.
-  </li>
-  <li>
-    Upload an avatar (preferably a pic of yourself). This will also show up on all of your posts.
-  </li>
-  <li>
-    Feel free to add whatever additional contact info you want.
-  </li>
-</ol>
+<div class="row">
+  <div class="col-sm-6">
+    <iframe src="//player.vimeo.com/video/74738920" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  </div>
 
-<!-- VIDEO HERE
-http://secretsauce.spoonuniversity.com/update-profile/
- -->
+  <div class="col-sm-6">
+    <p>PUT IT INTO PRACTICE:</p>
+    <ol>
+      <li>
+        From the dashboard, go to Profile > Your Profile.
+      </li>
+      <li>
+        Update your first and last name and change your display name to “First Last.”
+      </li>
+      <li>
+        Write a short bio about yourself. This will show up on all of your posts. Talk about yourself in the third person.
+      </li>
+      <li>
+        Create a password.
+      </li>
+      <li>
+        Upload an avatar (preferably a pic of yourself). This will also show up on all of your posts.
+      </li>
+      <li>
+        Feel free to add whatever additional contact info you want.
+      </li>
+    </ol>
+  </div>
+</div>
+
+
