--- a/app/views/positions/editorial/_tone.html.erb
+++ b/app/views/positions/editorial/_tone.html.erb
@@ -1,6 +1,7 @@
-Be real. Be honest. Channel <a href="https://twitter.com/lenadunham/status/399693669021646848">Lena Dunham</a>, not <a href="https://twitter.com/MarthaStewart/status/402162350456729600">Martha Stewart</a>.
-Spoon has a real college editorial voice (which you should be able to master, considering the fact that you’re a real college student). You’re not writing for Bon Appetit, you’re writing for your friends. If you wouldn’t write something in an email to your friends, don’t write it on Spoon.
-Look to <a href="http://thrillist.com">Thrillist</a> for voice inspiration. They kill it in the content strategy department. Check out these headlines:
+
+<p>Be real. Be honest. Channel <a href="https://twitter.com/lenadunham/status/399693669021646848">Lena Dunham</a>, not <a href="https://twitter.com/MarthaStewart/status/402162350456729600">Martha Stewart</a>.</p>
+<p>Spoon has a real college editorial voice (which you should be able to master, considering the fact that you’re a real college student). You’re not writing for Bon Appetit, you’re writing for your friends. If you wouldn’t write something in an email to your friends, don’t write it on Spoon.</p>
+<p>Look to <a href="http://thrillist.com">Thrillist</a> for voice inspiration. They kill it in the content strategy department. Check out these headlines:</p>
 <ul>
   <li>
     <strong>Mountain Dew Cheetos are here, but they’re only in Japan, obviously.</strong> Japan has given us Mountain Dew Cheetos, and they are reportedly just as weird as you’d think.
