added pages and styling

--- a/app/views/positions/agreement.html.erb
+++ b/app/views/positions/agreement.html.erb
@@ -1,5 +1,57 @@
 <h4>Contributor Agreement</h4>
 
+
+You’re Almost Done!
+
+Get connected! You are now part of a vibrant, nationwide network of talented college students, and that’s seriously something to brag about. Add your Spoon title to your Facebook job description, add it to your twitter handle, and most importantly, share your articles with family and friends. How cool would it be to see your post go viral?
+Congrats, you know everything you need to know for Spoon. If you have any questions, do not hesitate at all to email Sarah (sarah@spoonuniversity.com) or Mackenzie (mackenzie@spoonuniversity.com) about anything.
+ 
+Here’s the last step!
+
+Sign up for our in-house, staff-only updates and super secret tips (like discounts and perks, yo).
+ 
+Read the Contributor Agreement. By signing your name and providing the date below, you are effectively agreeing to the Contributor Agreement. Don’t forget to give us feedback on Secret Sauce!
+ 
+
+Name
+
+First
+ 
+Last
+
+Date
+
+Month
+ 
+Day
+ 
+Year
+
+What did you like about the Secret Sauce guide? What didn’t you like? Help us improve!
+
+
+
+<% end %>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- Agreement goes here -->
 
 <form action="<% agree_path %>" method="post">
