--- a/app/views/positions/editorial/_style.html.erb
+++ b/app/views/positions/editorial/_style.html.erb
@@ -63,3 +63,17 @@
   <%= render "positions/quiz_tr" %>
 </div>
 
+<div class="row">
+  <div id="quiz" class="span12">
+    
+  </div>
+  <div id="question" class="span12">
+    
+  </div>
+</div>
+
+
+
+
+
+
