--- a/app/views/positions/photo/_fave_photos.html.erb
+++ b/app/views/positions/photo/_fave_photos.html.erb
@@ -42,6 +42,7 @@
 </div>
 
 <div class="no-love-photos">
+  <h1>Photos We Don't Love</h1>
   <div class="row">
     <div class="col-sm-4">
       <img src="/assets/photo/21.png">
@@ -59,10 +60,11 @@
     <div class="col-sm-4">
       <img src="/assets/photo/24.png">
       This is framed too tightly. These cookies had mad potential, but the flash ruined them :(  
-  </div>
+    </div>
     <div class="col-sm-4">
       <img src="/assets/photo/25.png">  
       The cutting board is the same color as the food, which makes the photos much less interesting! But what do you do if your cutting board happens to be the same color as the food? You don’t use the cutting board in the photo. Or you borrow your neighbor’s.
+    </div>
     <div class="col-sm-4">
       <img src="/assets/photo/26.png">
       Way too orange — this should be color balanced. 
