--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -83,7 +83,7 @@ a.completed {
 	color:grey;
 }
 
-.styles-images div img{
+.styles-images div img, .expectations-images div img{
 	width: 90%;
 	padding-bottom: 15%;
 }
@@ -105,8 +105,8 @@ a.completed {
 }
 
 .col-md-3:nth-child(3n+1){
-		clear:left;
-	}
+	clear:left;
+}
 
 
 
