--- a/app/views/positions/photo/_expectations.html.erb
+++ b/app/views/positions/photo/_expectations.html.erb
@@ -43,4 +43,12 @@
     <%= render "positions/quiz_tr" %>
 </div>
 
+<div class="row">
+  <div id="quiz" class="span12">
+    
+  </div>
+  <div id="question" class="span12">
+    
+  </div>
+</div>
 
