fixed edit page

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,6 +1,5 @@
 body {
 	font-family: 'museo-sans-rounded';
-	padding-top: 70px;
 }
 
 .navbar {
@@ -108,16 +107,27 @@ a.completed {
 		clear:left;
 	}
 
+.btn.btn-primary {
+	background-image: none;
+}
+
 
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
-
+	body {
+		padding-top: 0px;
+	}
 
  }
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) {
+
+	body {
+		padding-top: 70px;
+	}
+
 	.col-sm-4:nth-child(3n+1) {
 	clear:none;
 	}
